--- a/cfg/MatchZy/config.cfg
+++ b/cfg/MatchZy/config.cfg
@@ -11,7 +11,7 @@ matchzy_whitelist_enabled_default false
 matchzy_knife_enabled_default true
 
 // Minimum ready players required to start the match. If set to 0, all connected players have to ready-up to start the match. Default: 2
-matchzy_minimum_ready_required 2
+matchzy_minimum_ready_required 10
 
 // Path of folder in which demos will be saved. If defined, it must not start with a slash and must end with a slash. Set to empty string to use the csgo root.
 // Example: matchzy_demo_path MatchZy/
@@ -39,11 +39,11 @@ matchzy_pause_after_restore true
 // Chat prefix to show whenever a MatchZy message is sent to players. Default value: [{Green}MatchZy{Default}]
 // Available Colors: {Default}, {Darkred}, {Green}, {LightYellow}, {LightBlue}, {Olive}, {Lime}, {Red}, {Purple}, {Grey}, {Yellow}, {Gold}, {Silver}, {Blue}, {DarkBlue}
 // {BlueGrey}, {Magenta} and {LightRed}. Make sure to end your prefix with {Default} to avoid coloring the messages in your prefix color.
-matchzy_chat_prefix [{Green}MatchZy{Default}]
+matchzy_chat_prefix [{Green}Fanta{Default}]
 
 // Chat prefix to show whenever an admin sends message using .asay <message>. Default value: [{Red}ADMIN{Default}]
 // Avaiable Colors are mentioned above
-matchzy_admin_chat_prefix [{Red}ADMIN{Default}]
+matchzy_admin_chat_prefix [{Red}π‹¿Ì‘±{Default}]
 
 // Number of seconds of delay before sending reminder messages from MatchZy (like unready message, paused message, etc).
 // Default: 13 (Because each message is kept in chat for ~13 seconds)
