--- a/cfg/MatchZy/warmup.cfg
+++ b/cfg/MatchZy/warmup.cfg
@@ -1,8 +1,9 @@
 bot_kick
-bot_quota 0
+bot_quota 3
+bot_difficulty 4
 mp_autokick 0
 mp_autoteambalance 0
-mp_buy_anywhere 0
+mp_buy_anywhere 1
 mp_buytime 15
 mp_death_drop_gun 0
 mp_free_armor 0
@@ -13,8 +14,8 @@ mp_respawn_on_death_ct 0
 mp_respawn_on_death_t 0
 mp_solid_teammates 0
 mp_spectators_max 20
-mp_maxmoney 16000
-mp_startmoney 16000
+mp_maxmoney 99999999
+mp_startmoney 99999999
 mp_timelimit 0
 sv_alltalk 0
 sv_auto_full_alltalk_during_warmup_half_end 0
@@ -25,7 +26,7 @@ sv_full_alltalk 0
 sv_grenade_trajectory 0
 sv_hibernate_when_empty 0
 mp_weapons_allow_typecount -1
-sv_infinite_ammo 0
+sv_infinite_ammo 2
 sv_showimpacts 0
 sv_voiceenable 1
 sm_cvar sv_mute_players_with_social_penalties 0
@@ -33,7 +34,7 @@ sv_mute_players_with_social_penalties 0
 tv_relayvoice 1
 sv_cheats 0
 mp_ct_default_melee weapon_knife
-mp_ct_default_secondary weapon_hkp2000
+mp_ct_default_secondary weapon_usp
 mp_ct_default_primary ""
 mp_t_default_melee weapon_knife
 mp_t_default_secondary weapon_glock
@@ -44,4 +45,3 @@ mp_warmup_pausetimer 1
 mp_warmuptime 9999
 cash_team_bonus_shorthanded 0
 cash_team_loser_bonus_shorthanded 0
-
